system/var/lib/rancher/rke2/server/manifests/cert-manager.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager
