system/var/lib/rancher/rke2/server/manifests/eck-helm.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: elastic-system
  labels:
    field.cattle.io/projectId: p-dm7qf
