system/var/lib/rancher/rke2/server/manifests/honeynet.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: honeynet
