system/var/lib/rancher/rke2/server/manifests/local-path-storage-helm.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: local-path-storage
