system/var/lib/rancher/rke2/server/manifests/rancher-helm.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cattle-system
