system/var/lib/rancher/rke2/server/manifests/elastic-stack.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: elastic
  labels:
    name: elastic
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana
  namespace: elastic
  annotations:
    cert-manager.io/issuer: elastic
    cert-manager.io/issuer-kind: Issuer
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
  - host: rancher.dutnet.local  # hostname to access rancher server
    http:
      paths:
      - path: /kibana(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: kibana-kb-http
            port:
              name: https
  tls:
  - hosts:
    - rancher.dutnet.local
    secretName: tls-kibana-ingress
---
