system/var/lib/rancher/rke2/server/manifests/ingress-policy.yaml
# Enable ingresses from the host network
# See https://docs.rke2.io/known_issues#ingress-in-cis-mode
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-to-backends
spec:
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          app.kubernetes.io/name: rke2-ingress-nginx
  policyTypes:
  - Ingress
